<resources>
    <string name="app_name">PropertiesTest</string>
    <string name="btn1">버튼 1</string>
    <string name="btn2">버튼 2</string>
    <string name="btn3">버튼 3</string>
    <string name="btn4">버튼 4</string>
    <string name="btn5">버튼 5</string>

    <string name="btn01">더하기</string>
    <string name="btn02">빼기</string>
    <string name="btn03">곱하기</string>
    <string name="btn04">나누기</string>
    <string name="btn05">나머지값</string>
    <string name="str01">계산 결과: </string>

    <string name="text1">여긴 텍스트뷰입니다.텍스트뷰입니다텍스트뷰입니다텍스트뷰입니다텍스트뷰입니다텍스트뷰입니다텍스트뷰입니다텍스트뷰입니다텍스트뷰입니다텍스트뷰입니다</string>
</resources>