<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Direct4_2Activity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:backgroundTint="@color/lightGreen"
        android:text="@string/btn1"
        android:textColor="@color/black"
        android:textSize="@dimen/marginMedium"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:textSize="@dimen/textSizeMedium"
        android:text="@string/text1"
        android:singleLine="true"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:background="@color/lightBlue"
        android:textSize="@dimen/textSizeLarge"
        android:hint="@string/btn3"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginBottom="@dimen/marginLarge"
        android:text="@string/btn2"
        android:textSize="@dimen/textSizeLarge"
        android:backgroundTint="@color/gray"
        android:enabled="false"
        />
</LinearLayout>