<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SimpleCalculator">

    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:textSize="@dimen/textSizeLarge"
        />
    <EditText
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:textSize="@dimen/textSizeLarge"
        />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/btn01"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"
        />
    <Button
        android:id="@+id/btnMinus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/btn02"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"
        />
    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/btn03"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"
        />
    <Button
        android:id="@+id/btnDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/btn04"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"
        />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginLeft="@dimen/marginLarge"
        android:layout_marginRight="@dimen/marginLarge"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/str01"
        android:textColor="@color/red"
        />
</LinearLayout>